Disable autocomplete and fix submit button appearance on Safari

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,7 +6,7 @@ p { word-wrap: break-word; }
 label { display: block; width: 150px; margin: 10px 0 5px; }
 input { display: inline-block; }
 .input-text { position: absolute; top: 0; left: 0; right: 0; width: 100%; height: 100%; padding: 10px; border: none; border-radius: 4px; }
-input#submit { position: absolute; top: 0; right: 0; width: 50px; height: 100%; text-align: center; font-weight: bold; border-radius: 0 3px 3px 0; border: none; font-size: 1.5em; color: white; background-color: lightgreen; }
+input#submit { -webkit-appearance: none; position: absolute; top: 0; right: 0; width: 50px; height: 100%; text-align: center; font-weight: bold; border-radius: 0 3px 3px 0; border: none; font-size: 1.5em; color: white; background-color: lightgreen; }
 .form-wrapper { position: absolute; bottom: 55px; left: 0; right: 0; height: 40px; border: #bfbfbf 1px solid; border-radius: 4px; text-align: center; }
 #message { bottom: 15px; left: 15px; right: 15px; height: 40px; border: #bfbfbf 1px solid; border-radius: 4px; text-align: center; }
 #outputWrapper { position: absolute; width: 100%; height: 73%; top: 0; left: 0; padding: 15px; border: #bfbfbf 1px solid; border-radius: 4px; box-shadow: #bfbfbf 2px 2px 2px; background-color: white; }
